Update `useOnlyOneX` messages
  * Sort `subs` keys before `condition` keys.
  * Replace ".esp file" with "ESP."
  * Escape special regex characters in conditions.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1408,13 +1408,13 @@ plugins:
   - name: 'ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 01 ESP' ]
         condition: 'many("ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp")'
-        subs: [ 'ERSO 01 .esp file' ]
   - name: 'ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 02 ESP' ]
         condition: 'many("ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp")'
-        subs: [ 'ERSO 02 .esp file' ]
   - name: 'ERSO 03 - (Soft)?(Super)?(Nightmare)?( ?Slighty)?( ?Mighty)? Dragons( Unleveled)?\.esp'
     tag:
       - Delev
@@ -1422,117 +1422,117 @@ plugins:
   - name: 'ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 07 ESP' ]
         condition: 'many("ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp")'
-        subs: [ 'ERSO 07 .esp file' ]
   - name: 'ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 08 ESP' ]
         condition: 'many("ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp")'
-        subs: [ 'ERSO 08 .esp file' ]
   - name: 'ERSO 09 - RUS-Npcs.*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 09 ESP' ]
         condition: 'many("ERSO 09 - RUS-Npcs.*\.esp")'
-        subs: [ 'ERSO 09 .esp file' ]
   - name: 'ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 13 ESP' ]
         condition: 'many("ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp")'
-        subs: [ 'ERSO 13 .esp file' ]
   - name: 'ERSO 13\.02 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 13.02 .*\.esp")'
-        subs: [ 'ERSO 13.02 .esp file' ]
+        subs: [ 'ERSO 13.02 ESP' ]
+        condition: 'many("ERSO 13\.02 .*\.esp")'
   - name: 'ERSO 14 - Vendors richer and Inns more expensive.esp'
     tag: [ Relev ]
   - name: 'ERSO 14\.02 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.02 .*\.esp")'
-        subs: [ 'ERSO 14.02 .esp file' ]
+        subs: [ 'ERSO 14.02 ESP' ]
+        condition: 'many("ERSO 14\.02 .*\.esp")'
   - name: 'ERSO 14\.03 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.03 .*\.esp")'
-        subs: [ 'ERSO 14.03 .esp file' ]
+        subs: [ 'ERSO 14.03 ESP' ]
+        condition: 'many("ERSO 14\.03 .*\.esp")'
   - name: 'ERSO 14\.04 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.04 .*\.esp")'
-        subs: [ 'ERSO 14.04 .esp file' ]
+        subs: [ 'ERSO 14.04 ESP' ]
+        condition: 'many("ERSO 14\.04 .*\.esp")'
   - name: 'ERSO 14\.05 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.05 .*\.esp")'
-        subs: [ 'ERSO 14.05 .esp file' ]
+        subs: [ 'ERSO 14.05 ESP' ]
+        condition: 'many("ERSO 14\.05 .*\.esp")'
   - name: 'ERSO 14\.06 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.06 .*\.esp")'
-        subs: [ 'ERSO 14.06 .esp file' ]
+        subs: [ 'ERSO 14.06 ESP' ]
+        condition: 'many("ERSO 14\.06 .*\.esp")'
   - name: 'ERSO 14\.07 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.07 .*\.esp")'
-        subs: [ 'ERSO 14.07 .esp file' ]
+        subs: [ 'ERSO 14.07 ESP' ]
+        condition: 'many("ERSO 14\.07 .*\.esp")'
   - name: 'ERSO 14\.08 .*\.esp'
     msg:
       - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.08 .*\.esp")'
-        subs: [ 'ERSO 14.08 .esp file' ]
+        subs: [ 'ERSO 14.08 ESP' ]
+        condition: 'many("ERSO 14\.08 .*\.esp")'
   - name: 'ERSO 15 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 15 ESP' ]
         condition: 'many("ERSO 15 .*\.esp")'
-        subs: [ 'ERSO 15 .esp file' ]
   - name: 'ERSO 16 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 16 ESP' ]
         condition: 'many("ERSO 16 .*\.esp")'
-        subs: [ 'ERSO 16 .esp file' ]
   - name: 'ERSO 17 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 17 ESP' ]
         condition: 'many("ERSO 17 .*\.esp")'
-        subs: [ 'ERSO 17 .esp file' ]
   - name: 'ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 18 ESP' ]
         condition: 'many("ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp")'
-        subs: [ 'ERSO 18 .esp file' ]
   - name: 'ERSO 19 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 19 ESP' ]
         condition: 'many("ERSO 19 .*\.esp")'
-        subs: [ 'ERSO 19 .esp file' ]
   - name: 'ERSO 20 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 20 ESP' ]
         condition: 'many("ERSO 20 .*\.esp")'
-        subs: [ 'ERSO 20 .esp file' ]
   - name: 'ERSO 22 - Better Necromancy Spells.esp'
     inc: [ 'Lord of the Dead.esp' ]
   - name: 'ERSO 26 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 26 ESP' ]
         condition: 'many("ERSO 26 .*\.esp")'
-        subs: [ 'ERSO 26 .esp file' ]
   - name: 'ERSO 27 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 27 ESP' ]
         condition: 'many("ERSO 27 .*\.esp")'
-        subs: [ 'ERSO 27 .esp file' ]
   - name: 'ERSO 28 .*\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 28 ESP' ]
         condition: 'many("ERSO 28 .*\.esp")'
-        subs: [ 'ERSO 28 .esp file' ]
   - name: 'ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp'
     msg:
       - <<: *useOnlyOneX
+        subs: [ 'ERSO 30 ESP' ]
         condition: 'many("ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp")'
-        subs: [ 'ERSO 30 .esp file' ]
 
   - name: 'FastTravelAlle.esp'
     url:
