--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1401,6 +1401,139 @@ plugins:
         itm: 7
 
 ###### Gameplay ######
+  - name: 'ERSO \d{2}.+\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/73222/'
+        name: 'Erkeil Real Skyrim Overhaul Legendary Edition'
+  - name: 'ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 01 ESP' ]
+        condition: 'many("ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp")'
+  - name: 'ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 02 ESP' ]
+        condition: 'many("ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp")'
+  - name: 'ERSO 03 - (Soft)?(Super)?(Nightmare)?( ?Slighty)?( ?Mighty)? Dragons( Unleveled)?\.esp'
+    tag:
+      - Delev
+      - Relev
+  - name: 'ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 07 ESP' ]
+        condition: 'many("ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp")'
+  - name: 'ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 08 ESP' ]
+        condition: 'many("ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp")'
+  - name: 'ERSO 09 - RUS-Npcs.*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 09 ESP' ]
+        condition: 'many("ERSO 09 - RUS-Npcs.*\.esp")'
+  - name: 'ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 13 ESP' ]
+        condition: 'many("ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp")'
+  - name: 'ERSO 13\.02 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 13.02 ESP' ]
+        condition: 'many("ERSO 13\.02 .*\.esp")'
+  - name: 'ERSO 14 - Vendors richer and Inns more expensive.esp'
+    tag: [ Relev ]
+  - name: 'ERSO 14\.02 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.02 ESP' ]
+        condition: 'many("ERSO 14\.02 .*\.esp")'
+  - name: 'ERSO 14\.03 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.03 ESP' ]
+        condition: 'many("ERSO 14\.03 .*\.esp")'
+  - name: 'ERSO 14\.04 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.04 ESP' ]
+        condition: 'many("ERSO 14\.04 .*\.esp")'
+  - name: 'ERSO 14\.05 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.05 ESP' ]
+        condition: 'many("ERSO 14\.05 .*\.esp")'
+  - name: 'ERSO 14\.06 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.06 ESP' ]
+        condition: 'many("ERSO 14\.06 .*\.esp")'
+  - name: 'ERSO 14\.07 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.07 ESP' ]
+        condition: 'many("ERSO 14\.07 .*\.esp")'
+  - name: 'ERSO 14\.08 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 14.08 ESP' ]
+        condition: 'many("ERSO 14\.08 .*\.esp")'
+  - name: 'ERSO 15 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 15 ESP' ]
+        condition: 'many("ERSO 15 .*\.esp")'
+  - name: 'ERSO 16 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 16 ESP' ]
+        condition: 'many("ERSO 16 .*\.esp")'
+  - name: 'ERSO 17 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 17 ESP' ]
+        condition: 'many("ERSO 17 .*\.esp")'
+  - name: 'ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 18 ESP' ]
+        condition: 'many("ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp")'
+  - name: 'ERSO 19 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 19 ESP' ]
+        condition: 'many("ERSO 19 .*\.esp")'
+  - name: 'ERSO 20 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 20 ESP' ]
+        condition: 'many("ERSO 20 .*\.esp")'
+  - name: 'ERSO 22 - Better Necromancy Spells.esp'
+    inc: [ 'Lord of the Dead.esp' ]
+  - name: 'ERSO 26 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 26 ESP' ]
+        condition: 'many("ERSO 26 .*\.esp")'
+  - name: 'ERSO 27 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 27 ESP' ]
+        condition: 'many("ERSO 27 .*\.esp")'
+  - name: 'ERSO 28 .*\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 28 ESP' ]
+        condition: 'many("ERSO 28 .*\.esp")'
+  - name: 'ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'ERSO 30 ESP' ]
+        condition: 'many("ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp")'
+
   - name: 'FastTravelAlle.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/27321/'
@@ -10377,20 +10510,7 @@ plugins:
     tag:
       - Delev
       - Relev
-  - name: 'ERSO 01 - Vanilla Race Redone v.1.4.esp'
-    msg: [ *obsolete ]
-  - name: 'ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 01 - (Vanilla Races Redone|VRR.+)\.esp")'
-        subs: [ 'ERSO 01 .esp file' ]
-  - name: 'ERSO 02 - Enhanced Fauna and Monsters for Skyrim v.2.0.esp'
-    msg: [ *obsolete ]
-  - name: 'ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 02 - (Enhanced Fauna and Monsters for Skyrim|EFMS very bigger giant mammoths)\.esp")'
-        subs: [ 'ERSO 02 .esp file' ]
+
   - name: 'DeadlyDiversifiedDragonsPatch.esp'
     after:
       - 'DeadlyDragons.esp'
@@ -10435,209 +10555,11 @@ plugins:
     tag:
       - Delev
       - Relev
-  - name: '(ERSO 03 - )?(Soft)?(Super)?(Nightmare)?(Slighty| Slighty)?(Mighty| Mighty)? Dragons( Unleveled)?( v\.\d\.\d)?\.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Use the [compatibility patch](https://www.nexusmods.com/skyrim/mods/13423) for deadly dragons.'
-          - lang: de
-            text: 'Verwenden Sie den [Kompatibilitätspatch](https://www.nexusmods.com/skyrim/mods/13423) für Deadly Dragons.'
-          - lang: ja
-            text: '[compatibility patch](https://www.nexusmods.com/skyrim/mods/13423)にあるDeadly Dragons用の互換パッチを使用してください。'
-          - lang: ru
-            text: 'Используйте [патч совместимости](https://www.nexusmods.com/skyrim/mods/13423) для мода Deadly Dragons.'
-        condition: 'file("DeadlyDragons(Hard|Normal|Hardcore)?( DV)?\.esp") and not file("MD with DeadlyD and DDiversified( Unleveled)?\.esp")'
-    tag:
-      - Delev
-      - Relev
-  - name: 'ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DG\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DG\.esp")'
-        subs: [ 'ERSO 03 Dawnguard .esp file' ]
-  - name: 'ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DB\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DB\.esp")'
-        subs: [ 'ERSO 03 Dragonborn .esp file' ]
-  - name: 'ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DD\.esp'
-    msg:
-      - <<: *requiresX
-        condition: 'not file("DeadlyDragons(Hard|Normal|Hardcore)?( DV)?\.esp")'
-        subs: [ '[Deadly Dragons](https://www.nexusmods.com/skyrim/mods/3829/) (6.3.5)' ]
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03 - (Nightmare |Slighty |Super )?Mighty Dragons( Unleveled)?( plus)? DD\.esp")'
-        subs: [ 'ERSO 03 Deadly Dragons .esp file' ]
-  - name: 'ERSO 03.1a - .+\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03.1a - .+\.esp")'
-        subs: [ 'ERSO 03.1a .esp file' ]
-  - name: 'ERSO 03.1b - .+\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03.1b - .+\.esp")'
-        subs: [ 'ERSO 03.1b .esp file' ]
-  - name: 'ERSO 03.3 - (Nightmare |Slighty Mighty |Super Mighty |Mighty )Dawnguard Dragons\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03.3 - (Nightmare |Slighty Mighty |Super Mighty |Mighty )Dawnguard Dragons\.esp")'
-        subs: [ 'ERSO 03.3 .esp file' ]
-  - name: 'ERSO 03.4 - (Nightmare |Slighty Mighty |Super Mighty |Mighty )Dragonborn Dragons\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03.4 - (Nightmare |Slighty Mighty |Super Mighty |Mighty )Dragonborn Dragons\.esp")'
-        subs: [ 'ERSO 03.4 .esp file' ]
+
   - name: 'DeadlyMonsters.esp'
     req: [ *SKSE ]
     msg: [ *requiresMCM_SkyUI ]
-  - name: 'ERSO 03.5 - New Dragon( Super)? Loots\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 03.5 - New Dragon( Super)? Loots\.esp")'
-        subs: [ 'ERSO 03.5 .esp file' ]
-    tag:
-      - Delev
-      - Relev
-  - name: 'ERSO 04 - Mighty Dragon Priests v.4.0.esp'
-    msg: [ *obsolete ]
-  - name: 'ERSO 05 - Dovah Holy Book v.4.0.esp'
-    msg: [ *obsolete ]
-  - name: 'ERSO 06 - Mighty Odahviing v.4.0.esp'
-    msg: [ *obsolete ]
-  - name: 'ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 07 - (Super )?(Slighty )?(Mighty )?(Nightmare )?Dragon Priests\.esp")'
-        subs: [ 'ERSO 07 .esp file' ]
-  - name: 'ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 08 - RUS-00 Main( plus Dawnguard)?( Dragonborn)?\.esp")'
-        subs: [ 'ERSO 08 .esp file' ]
-  - name: 'ERSO 09 - RUS-Npcs.*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 09 - RUS-Npcs.*\.esp")'
-        subs: [ 'ERSO 09 .esp file' ]
-  - name: 'ERSO 09 - Vendor Trainer Quest-giver protected( USKP)?\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 09 - Vendor Trainer Quest-giver protected( USKP)?\.esp")'
-        subs: [ 'ERSO 09 Vendor Trainer .esp file' ]
-  - name: 'ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 13 - MD - (A Better Level Progression|ABLP 50 Hardcore)\.esp")'
-        subs: [ 'ERSO 13 .esp file' ]
-  - name: 'ERSO 13.02 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 13.02 .*\.esp")'
-        subs: [ 'ERSO 13.02 .esp file' ]
-  - name: 'ERSO 13.03 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 13.03 .*\.esp")'
-        subs: [ 'ERSO 13.03 .esp file' ]
-  - name: 'ERSO 14 - Vendors richer and Inns more expensive.esp'
-    tag: [ Relev ]
-  - name: 'ERSO 14.02 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.02 .*\.esp")'
-        subs: [ 'ERSO 14.02 .esp file' ]
-  - name: 'ERSO 14.03 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.03 .*\.esp")'
-        subs: [ 'ERSO 14.03 .esp file' ]
-  - name: 'ERSO 14.04 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.04 .*\.esp")'
-        subs: [ 'ERSO 14.04 .esp file' ]
-  - name: 'ERSO 14.05 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.05 .*\.esp")'
-        subs: [ 'ERSO 14.05 .esp file' ]
-  - name: 'ERSO 14.06 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.06 .*\.esp")'
-        subs: [ 'ERSO 14.06 .esp file' ]
-  - name: 'ERSO 14.07 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.07 .*\.esp")'
-        subs: [ 'ERSO 14.07 .esp file' ]
-  - name: 'ERSO 14.08 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 14.08 .*\.esp")'
-        subs: [ 'ERSO 14.08 .esp file' ]
-  - name: 'ERSO 15 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 15 .*\.esp")'
-        subs: [ 'ERSO 15 .esp file' ]
-  - name: 'ERSO 16 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 16 .*\.esp")'
-        subs: [ 'ERSO 16 .esp file' ]
-  - name: 'ERSO 17 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 17 .*\.esp")'
-        subs: [ 'ERSO 17 .esp file' ]
-  - name: 'ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 18 - (Legendary Armors and Weapons Enhanced|LAWE Hardcore)\.esp")'
-        subs: [ 'ERSO 18 .esp file' ]
-  - name: 'ERSO 19 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 19 .*\.esp")'
-        subs: [ 'ERSO 19 .esp file' ]
-  - name: 'ERSO 20 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 20 .*\.esp")'
-        subs: [ 'ERSO 20 .esp file' ]
-  - name: 'ERSO 22 - Better Necromancy Spells.esp'
-    inc: [ 'Lord of the Dead.esp' ]
-  - name: 'ERSO 26 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 26 .*\.esp")'
-        subs: [ 'ERSO 26 .esp file' ]
-  - name: 'ERSO 27 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 27 .*\.esp")'
-        subs: [ 'ERSO 27 .esp file' ]
-  - name: 'ERSO 28 .*\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 28 .*\.esp")'
-        subs: [ 'ERSO 28 .esp file' ]
-  - name: 'ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 30 - Better Enemy AI( Dawnguard&Dragonborn)? redux\.esp")'
-        subs: [ 'ERSO 30 .esp file' ]
-  - name: 'ERSO 32 - Lord of the Dead( for S(PERG|KYRE))?\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("ERSO 32 - Lord of the Dead( for S(PERG|KYRE))?\.esp")'
-        subs: [ 'ERSO 32 .esp file' ]
-    tag:
-      - Delev
-      - Relev
+
   - name: 'mehrdrachenstufen.esp'
     tag: [ Relev ]
   - name: 'Monster Wars.esp'
