--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1331,6 +1331,7 @@ plugins:
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 16
 
+  - name: 'specializedfollowers.es[mp]'
   - name: 'specializedfollowers.esp'
     msg:
       - type: warn
