--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1332,6 +1332,9 @@ plugins:
         itm: 16
 
   - name: 'specializedfollowers.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/7245/'
+        name: 'Specialized Followers'
   - name: 'specializedfollowers.esp'
     msg:
       - type: warn
