Add `alreadyInX` message
  * Tweaked version included in Specialized versions.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1337,6 +1337,9 @@ plugins:
         name: 'Specialized Followers'
   - name: 'specializedfollowers.esp'
     msg:
+      - <<: *alreadyInX
+        subs: [ 'Better Followers - Specialized ESP' ]
+        condition: 'active("Better Followers - SB?N?P\.esp")'
       - <<: *useInstead
         subs: [ 'Better Followers - Specialized ESP' ]
         condition: 'active("Better Followers - B?N?P\.esp")'
