--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1635,6 +1635,33 @@ plugins:
         display: 'Requiem v3.0.0+'
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
+  # Cooking Recipes Pack - Translations
+  - name: 'RecettesMaterielFabrication.esp'
+    inc: [ 'CraftingMaterialsRecipes.esp' ]
+  - name: 'RecettesSansSel.esp'
+    inc: [ 'NoSaltRecipes.esp' ]
+  - name: 'Wolfs_Advanced_Recipes_Rus.esp'
+    inc: [ 'Wolfs_Advanced_Recipes.esp' ]
+  - name: 'Wolfs_Buff_Recipes_Rus.esp'
+    inc: [ 'Wolfs_Buff_Recipes.esp' ]
+  - name: 'Wolfs_Intermediate_Recipes_Rus.esp'
+    inc: [ 'Wolfs_Intermediate_Recipes.esp' ]
+  - name: 'WolfsRecettes.+\.esp'
+    msg:
+      - type: warn
+        content:
+          - lang: en
+            text: 'Use Wolfs_*_Recipes esps or WolfsRecettes* esps, not both.'
+          - lang: de
+            text: 'Benutzen Sie Wolfs_*_Recipes esps oder WolfsRecettes* esps, nicht beide.'
+          - lang: es
+            text: 'Usar Wolfs_*_Recipes esps o WolfsRecettes* esps, no ambos.'
+          - lang: ja
+            text: 'Wolfs_*_Recipes espかWolfsRecettes* espのどちらかを使用してください。'
+          - lang: ru
+            text: 'Используйте Wolfs_*_Recipes esps или WolfsRecettes* esps, не не вместе.'
+        condition: 'file("Wolfs_.+_Recipes\.esp") and file("WolfsRecettes.+\.esp")'
+
   - name: 'WoodChoppingExtended.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/16761/'
@@ -5259,8 +5286,7 @@ plugins:
     tag:
       - Delev
       - Relev
-  - name: 'RecettesMaterielFabrication.esp'
-    inc: [ 'CraftingMaterialsRecipes.esp' ]
+
   - name: 'Creepy Dungeons.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/12808/' ]
     msg:
@@ -6213,8 +6239,7 @@ plugins:
         display: '[Cooking Expanded](https://www.nexusmods.com/skyrim/mods/1409)'
       - name: 'NordNeeds.esp'
         display: '[NordNeeds](https://www.nexusmods.com/skyrim/mods/21384)'
-  - name: 'RecettesSansSel.esp'
-    inc: [ 'NoSaltRecipes.esp' ]
+
   - name: 'Oblivion Black Soul Gem Creation.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/48529/' ]
     clean:
@@ -6925,27 +6950,7 @@ plugins:
         crc: 0xD23B4D2A
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 11
-  - name: 'Wolfs_Buff_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Buff_Recipes.esp' ]
-  - name: 'Wolfs_Intermediate_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Intermediate_Recipes.esp' ]
-  - name: 'Wolfs_Advanced_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Advanced_Recipes.esp' ]
-  - name: 'WolfsRecettes.+\.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'Use Wolfs_*_Recipes esps or WolfsRecettes* esps, not both.'
-          - lang: de
-            text: 'Benutzen Sie Wolfs_*_Recipes esps oder WolfsRecettes* esps, nicht beide.'
-          - lang: es
-            text: 'Usar Wolfs_*_Recipes esps o WolfsRecettes* esps, no ambos.'
-          - lang: ja
-            text: 'Wolfs_*_Recipes espかWolfsRecettes* espのどちらかを使用してください。'
-          - lang: ru
-            text: 'Используйте Wolfs_*_Recipes esps или WolfsRecettes* esps, не не вместе.'
-        condition: 'file("Wolfs_.+_Recipes\.esp") and file("WolfsRecettes.+\.esp")'
+
   - name: 'Woodcutter''s Wife.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/12740/' ]
     dirty:
