--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1635,6 +1635,11 @@ plugins:
         display: 'Requiem v3.0.0+'
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
+  - name: '(Wolfs(_\w+_Recipes(_Rus)?|Recettes\w+)|(CraftingMaterials|NoSalt)Recipes|Recettes(MaterielFabrication|SansSel))\.esp'
+  - name: 'Wolfs(_Advanced_Recipes(_Rus)?|RecettesAvancees)\.esp'
+  - name: 'Wolfs(_Buff_Recipes(_Rus)?|RecettesBuff)\.esp'
+  - name: 'Wolfs(_Intermediate_Recipes(_Rus)?|RecettesIntermediaires)\.esp'
+  - name: 'Wolfs(_Simple_Recipes|RecettesSimples)\.esp'
   # Cooking Recipes Pack - Translations
   - name: 'RecettesMaterielFabrication.esp'
     inc: [ 'CraftingMaterialsRecipes.esp' ]
