--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1636,6 +1636,9 @@ plugins:
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
   - name: '(Wolfs(_\w+_Recipes(_Rus)?|Recettes\w+)|(CraftingMaterials|NoSalt)Recipes|Recettes(MaterielFabrication|SansSel))\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1368/'
+        name: 'Cooking Recipes Pack'
   - name: 'Wolfs(_Advanced_Recipes(_Rus)?|RecettesAvancees)\.esp'
   - name: 'Wolfs(_Buff_Recipes(_Rus)?|RecettesBuff)\.esp'
   - name: 'Wolfs(_Intermediate_Recipes(_Rus)?|RecettesIntermediaires)\.esp'
