--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1635,6 +1635,36 @@ plugins:
         display: 'Requiem v3.0.0+'
         condition: 'version("Requiem.esp", "3.0.0", >=)'
 
+  - name: '(Wolfs(_\w+_Recipes(_Rus)?|Recettes\w+)|(CraftingMaterials|NoSalt)Recipes|Recettes(MaterielFabrication|SansSel))\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1368/'
+        name: 'Cooking Recipes Pack'
+  - name: 'Wolfs(_Advanced_Recipes(_Rus)?|RecettesAvancees)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Cooking Recipes Pack Advanced ESP' ]
+        condition: 'many("Wolfs(_Advanced_Recipes(_Rus)?|RecettesAvancees)\.esp")'
+  - name: 'Wolfs(_Buff_Recipes(_Rus)?|RecettesBuff)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Cooking Recipes Pack Buff ESP' ]
+        condition: 'many("Wolfs(_Buff_Recipes(_Rus)?|RecettesBuff)\.esp")'
+  - name: 'Wolfs(_Intermediate_Recipes(_Rus)?|RecettesIntermediaires)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Cooking Recipes Pack Intermediate ESP' ]
+        condition: 'many("Wolfs(_Intermediate_Recipes(_Rus)?|RecettesIntermediaires)\.esp")'
+  - name: 'Wolfs(_Simple_Recipes|RecettesSimples)\.esp'
+    msg:
+      - <<: *useOnlyOneX
+        subs: [ 'Cooking Recipes Pack Simple ESP' ]
+        condition: 'many("Wolfs(_Simple_Recipes|RecettesSimples)\.esp")'
+  # Cooking Recipes Pack - Translations
+  - name: 'RecettesMaterielFabrication.esp'
+    inc: [ 'CraftingMaterialsRecipes.esp' ]
+  - name: 'RecettesSansSel.esp'
+    inc: [ 'NoSaltRecipes.esp' ]
+
   - name: 'WoodChoppingExtended.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/16761/'
@@ -5259,8 +5289,7 @@ plugins:
     tag:
       - Delev
       - Relev
-  - name: 'RecettesMaterielFabrication.esp'
-    inc: [ 'CraftingMaterialsRecipes.esp' ]
+
   - name: 'Creepy Dungeons.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/12808/' ]
     msg:
@@ -6213,8 +6242,7 @@ plugins:
         display: '[Cooking Expanded](https://www.nexusmods.com/skyrim/mods/1409)'
       - name: 'NordNeeds.esp'
         display: '[NordNeeds](https://www.nexusmods.com/skyrim/mods/21384)'
-  - name: 'RecettesSansSel.esp'
-    inc: [ 'NoSaltRecipes.esp' ]
+
   - name: 'Oblivion Black Soul Gem Creation.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/48529/' ]
     clean:
@@ -6925,27 +6953,7 @@ plugins:
         crc: 0xD23B4D2A
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 11
-  - name: 'Wolfs_Buff_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Buff_Recipes.esp' ]
-  - name: 'Wolfs_Intermediate_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Intermediate_Recipes.esp' ]
-  - name: 'Wolfs_Advanced_Recipes_Rus.esp'
-    inc: [ 'Wolfs_Advanced_Recipes.esp' ]
-  - name: 'WolfsRecettes.+\.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'Use Wolfs_*_Recipes esps or WolfsRecettes* esps, not both.'
-          - lang: de
-            text: 'Benutzen Sie Wolfs_*_Recipes esps oder WolfsRecettes* esps, nicht beide.'
-          - lang: es
-            text: 'Usar Wolfs_*_Recipes esps o WolfsRecettes* esps, no ambos.'
-          - lang: ja
-            text: 'Wolfs_*_Recipes espかWolfsRecettes* espのどちらかを使用してください。'
-          - lang: ru
-            text: 'Используйте Wolfs_*_Recipes esps или WolfsRecettes* esps, не не вместе.'
-        condition: 'file("Wolfs_.+_Recipes\.esp") and file("WolfsRecettes.+\.esp")'
+
   - name: 'Woodcutter''s Wife.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/12740/' ]
     dirty:
