--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1614,7 +1614,7 @@ plugins:
       - Relev
       - Stats
     dirty:
-      ## v1.0.3 RealisticNeedsandDiseasesUSLEEP - ENG
+      # v1.0.3 RealisticNeedsandDiseasesUSLEEP - ENG
       - <<: *quickClean
         crc: 0x8B0C212F
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
