--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1596,6 +1596,7 @@ plugins:
   - name: 'Imp''s More Complex Needs.esm'
     msg: [ *obsolete ]
 
+  - name: '(RealisticNeedsandDiseases|RND_\w+-Patch)\.esp'
   - name: 'RealisticNeedsandDiseases.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/75876/'
@@ -1619,6 +1620,7 @@ plugins:
         crc: 0x8B0C212F
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 1
+  - name: 'RND_(BabettesFeast|Dawnguard|DestructibleBottles|Dragonborn|DrinkingFountains|ETaC|HearthFires|Requiem|RWS|UniqueBoozeBottles|USKP)-Patch\.esp'
   - name: 'RND_BabettesFeast-Patch.esp'
     after: [ '3DNPC.esp' ]
     msg:
