--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1597,10 +1597,10 @@ plugins:
     msg: [ *obsolete ]
 
   - name: '(RealisticNeedsandDiseases|RND_\w+-Patch)\.esp'
-  - name: 'RealisticNeedsandDiseases.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/75876/'
-        name: 'Realistic Needs and Diseases All-In-One for USLEEP on Nexus Mods'
+        name: 'Realistic Needs and Diseases All-In-One for USLEEP'
+  - name: 'RealisticNeedsandDiseases.esp'
     after:
       - '3DNPC.esp'
       - 'TradeRoutes.esp'
