--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1598,8 +1598,12 @@ plugins:
 
   - name: '(RealisticNeedsandDiseases|RND_\w+-Patch)\.esp'
     url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/26228/'
+        name: 'Realistic Needs and Diseases'
       - link: 'https://www.nexusmods.com/skyrim/mods/75876/'
         name: 'Realistic Needs and Diseases All-In-One for USLEEP'
+      - link: 'https://www.nexusmods.com/skyrim/mods/78785/'
+        name: 'Realistic Needs and Diseases 2.0'
   - name: 'RealisticNeedsandDiseases.esp'
     after:
       - '3DNPC.esp'
