--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -977,6 +977,8 @@ plugins:
       - crc: 0xE87C93C0
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Unique BOOZE Bottles( Alternate Names Version)?\.esp'
+
 ###### AudioVisual - Sound & Music ######
   - name: 'AOS.esp'
     url:
