--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -978,6 +978,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Unique BOOZE Bottles( Alternate Names Version)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/19922/'
+        name: 'Unique Booze Bottles HD'
 
 ###### AudioVisual - Sound & Music ######
   - name: 'AOS.esp'
