Add `alreadyInX` message
  * Alt. Names version (& therefore original) included in RN&D patch.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -981,6 +981,10 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/19922/'
         name: 'Unique Booze Bottles HD'
+    msg:
+      - <<: *alreadyInX
+        subs: [ '**RND_UniqueBoozeBottles-Patch.esp**' ]
+        condition: 'file("RND_UniqueBoozeBottles-Patch.esp")'
 
 ###### AudioVisual - Sound & Music ######
   - name: 'AOS.esp'
