Add `useOnlyOneX` message
  * Only one version should be used at a time.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -985,6 +985,9 @@ plugins:
       - <<: *alreadyInX
         subs: [ '**RND_UniqueBoozeBottles-Patch.esp**' ]
         condition: 'file("RND_UniqueBoozeBottles-Patch.esp")'
+      - <<: *useOnlyOneX
+        subs: [ 'Unique Booze Bottles ESP' ]
+        condition: 'many("Unique BOOZE Bottles( Alternate Names Version)?\.esp")'
 
 ###### AudioVisual - Sound & Music ######
   - name: 'AOS.esp'
