--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1669,6 +1669,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'vanillaarcheryimproved.esp'
+    url:
+      - link: 'https://steamcommunity.com/sharedfiles/filedetails/?id=71452193/'
+        name: 'Vanilla Archery Improved'
     msg:
       - type: error
         content:
