--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1672,6 +1672,7 @@ plugins:
     url:
       - link: 'https://steamcommunity.com/sharedfiles/filedetails/?id=71452193/'
         name: 'Vanilla Archery Improved'
+    inc: [ 'vanillaarcheryimproveddawnguard.esp' ]
     msg:
       - type: error
         content:
@@ -18563,10 +18564,6 @@ plugins:
         itm: 3
 
   - name: 'vanillaarcheryimproved(dawnguard)?\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("vanillaarcheryimproved(dawnguard)?\.esp")'
-        subs: [ 'vanillaarcheryimproved .esp file' ]
   - name: 'Visible Aetherial Crown.esp'
     msg: [ *obsolete ]
   - name: 'wabba-ori_proj.esp'
