Update Vanilla Archery Improved (#772)
* Move plugin
  * To 'Gameplay - Combat' section.
  * Edits various aspects of archery.

* Add location
  * https://steamcommunity.com/sharedfiles/filedetails/?id=71452193/

* Add incompatibility
  * Replaces `useOnlyOneX` message.

* Replace unaliased message
  * With `useVersion`.
  * Vanilla Archery Improved - Dawnguard Edition
    * https://steamcommunity.com/sharedfiles/filedetails/?id=88845585/
  * Active status check is sufficient.

* Remove plugin
  * No more metadata.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1668,6 +1668,16 @@ plugins:
       - crc: 0x4B399546
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'vanillaarcheryimproved.esp'
+    url:
+      - link: 'https://steamcommunity.com/sharedfiles/filedetails/?id=71452193/'
+        name: 'Vanilla Archery Improved'
+    inc: [ 'vanillaarcheryimproveddawnguard.esp' ]
+    msg:
+      - <<: *useVersion
+        subs: [ '[Dawnguard](https://steamcommunity.com/sharedfiles/filedetails/?id=88845585/)' ]
+        condition: 'active("Dawnguard.esm") and not active("vanillaarcheryimproveddawnguard.esp")'
+
   - name: 'WTF.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/28761/'
@@ -18544,24 +18554,7 @@ plugins:
         crc: 0xFE29441F
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 3
-  - name: 'vanillaarcheryimproved.esp'
-    msg:
-      - type: error
-        content:
-          - lang: en
-            text: 'Use vanillaarcheryimproveddawnguard.esp instead'
-          - lang: de
-            text: 'Verwenden Sie stattdessen vanillaarcheryimproveddawnguard.esp'
-          - lang: ja
-            text: 'vanillaarcheryimproveddawnguard.espを使用してください。'
-          - lang: ru
-            text: 'Используйте вместо этого vanillaarcheryimproveddawnguard.esp'
-        condition: 'active("Dawnguard.esm") and not file("vanillaarcheryimproveddawnguard.esp")'
-  - name: 'vanillaarcheryimproved(dawnguard)?\.esp'
-    msg:
-      - <<: *useOnlyOneX
-        condition: 'many("vanillaarcheryimproved(dawnguard)?\.esp")'
-        subs: [ 'vanillaarcheryimproved .esp file' ]
+
   - name: 'Visible Aetherial Crown.esp'
     msg: [ *obsolete ]
   - name: 'wabba-ori_proj.esp'
