--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1429,6 +1429,9 @@ plugins:
 
 ###### Gameplay ######
   - name: 'CAS.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/21015/'
+        name: 'Configurable Auto-Saver'
     msg:
       - type: warn
         content:
