--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1428,6 +1428,12 @@ plugins:
         itm: 7
 
 ###### Gameplay ######
+  - name: 'CAS.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/21015/'
+        name: 'Configurable Auto-Saver'
+    inc: [ 'kuerteeAutoSaveAndTime.esp' ]
+
   - name: 'ERSO \d{2}.+\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/73222/'
@@ -7132,21 +7138,7 @@ plugins:
         crc: 0x28CCA4F1
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 51
-  - name: 'CAS.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'Only use the save features of either "CAS" or "kuertee''s auto-save and time".'
-          - lang: de
-            text: 'Verwenden Sie nur die Speicherfunktionen von "CAS" oder "kuertee''s auto-save and time".'
-          - lang: es
-            text: 'Utilizar únicamente las funciones de guardar de "CAS" o "kuertee''s auto-save and time".'
-          - lang: ja
-            text: 'セーブ機能は「CAS」か「kuertee''s auto-save and time」のどちらかの機能のみ利用できます。'
-          - lang: ru
-            text: 'Используйте функцию сохранения только  из одного мода: из "CAS" или "kuertee''s auto-save and time".'
-        condition: 'file("kuerteeAutoSaveAndTime.esp")'
+
   - name: 'ContainerMagic.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/23001/' ]
     req: [ *SKSE ]
