--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1692,6 +1692,11 @@ plugins:
 
 ###### Gameplay - Crafting & Harvesting ######
   - name: 'Complete Crafting Overhaul( - BS version)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8003/'
+        name: 'Complete Crafting Overhaul'
+      - link: 'https://www.nexusmods.com/skyrim/mods/26230/'
+        name: 'Sharlikrans Compatibility Patches'
     inc: [ 'Smithing Perks Overhaul.esp' ]
     msg:
       - type: say
