--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1739,6 +1739,7 @@ plugins:
             text: 'Возможны конфликты с модами, модифицирующими существующие рецепты.'
   - name: 'Complete Crafting Overhaul.esp'
     inc: [ 'Complete Crafting Overhaul - BS version.esp' ]
+  - name: 'Complete Crafting Overhaul - BS version.esp'
 
   - name: 'Immersive Ingestibles.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/71708/' ]
