--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2352,6 +2352,8 @@ plugins:
         util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
         nav: 3
 
+###### 3rd Party Patches ######
+
 ###### Anything new can go after this (If you're not sure where to put it) ######
   - name: 'MoT_First_LoadOrder_File_After_Skyrim.esm'
     url: [ 'https://www.nexusmods.com/skyrim/mods/6272/' ]
