--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2354,6 +2354,9 @@ plugins:
 
 ###### 3rd Party Patches ######
   - name: 'ReProccerDragonborn.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27092/'
+        name: 'Balbor and Steelsouls SkyRe ReProccer Project'
     group: *reproccerGroup
     msg:
       - type: say
