--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2352,6 +2352,19 @@ plugins:
         util: '[TES5Edit v4.0.4c](https://www.nexusmods.com/skyrim/mods/25859)'
         nav: 3
 
+###### 3rd Party Patches ######
+  - name: 'ReProccerDragonborn.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27092/'
+        name: 'Balbor and Steelsouls SkyRe ReProccer Project'
+    group: *reproccerGroup
+    msg:
+      - <<: *masterReassign
+        subs:
+          - 'ReProccer.esp'
+          - 'SUM.esp'
+        condition: 'active("SUM.esp")'
+
 ###### Anything new can go after this (If you're not sure where to put it) ######
   - name: 'MoT_First_LoadOrder_File_After_Skyrim.esm'
     url: [ 'https://www.nexusmods.com/skyrim/mods/6272/' ]
@@ -24441,18 +24454,6 @@ plugins:
       - <<: *alreadyInX
         condition: 'file("qotsafans.*\.esp")'
         subs: [ 'Qotsafan''s Reproccer patches' ]
-  - name: 'ReProccerDragonborn.esp'
-    group: *reproccerGroup
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Change the master file of this patch from ReProccer.esp to SUM.esp if using SUM''s merged patch feature.'
-          - lang: de
-            text: 'Ändern Sie die Masterdatei dieses Patches von ReProccer.esp zu SUM.esp, wenn Sie die Funktion für zusammengeführte Patches von SUM verwenden.'
-          - lang: ja
-            text: 'SUMのmerged patch機能を使用している場合、このパッチのマスターファイルをReProccer.espからSUM.espに変更してください。'
-        condition: 'file("SUM.esp")'
   - name: 'ReProccer-SkyforgeShields.esp'
     group: *reproccerGroup
   - name: 'SkyforgedWeapons ReProccer Patch.esp'
