--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1393,6 +1393,8 @@ plugins:
       - Delev
       - Relev
 
+###### Encounters - Neutral ######
+
 ###### Environment, Landscape & Flora ######
   - name: 'Whiterun Trees.esp'
     url:
