--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1395,6 +1395,9 @@ plugins:
 
 ###### Encounters - Neutral ######
   - name: 'AsharaMerchants.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/28996/'
+        name: 'Ashara Merchants and Trainers'
     msg:
       - type: say
         content:
