Add cleaning data
  * v3.0.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1398,6 +1398,9 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/28996/'
         name: 'Ashara Merchants and Trainers'
+    clean:
+      - crc: 0xACC7E641
+        util: 'TES5Edit v4.0.4c'
 
 ###### Environment, Landscape & Flora ######
   - name: 'Whiterun Trees.esp'
