--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1393,6 +1393,15 @@ plugins:
       - Delev
       - Relev
 
+###### Encounters - Neutral ######
+  - name: 'AsharaMerchants.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/28996/'
+        name: 'Ashara Merchants and Trainers'
+    clean:
+      - crc: 0xACC7E641
+        util: 'TES5Edit v4.0.4c'
+
 ###### Environment, Landscape & Flora ######
   - name: 'Whiterun Trees.esp'
     url:
@@ -4935,18 +4944,7 @@ plugins:
         subs: [ 'Arrows of Magicka .esp file' ]
   - name: 'ARTOFMAGIC.esp'
     msg: [ *obsolete ]
-  - name: 'AsharaMerchants.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Certain version(s) of this mod require active Dawnguard, Hearthfire and/or Dragonborn. See [author''s instructions.](https://www.nexusmods.com/skyrim/mods/28996)'
-          - lang: de
-            text: 'Bestimmte Versionen dieser Mod erfordern das Dawnguard, Hearthfire und/oder Dragonborn aktiv sind. Siehe [Anweisungen des Autors.](https://www.nexusmods.com/skyrim/mods/28996)'
-          - lang: ja
-            text: 'このModの特定のバージョンを使用するにはDawnguardとHearthfire、またはDragonbornをアクティブにする必要があります。[作者によるガイド](https://www.nexusmods.com/skyrim/mods/28996)を参照してください。'
-          - lang: ru
-            text: 'Некоторые версии этого мода требуют Dawnguard, Hearthfire и/или Dragonborn. Читайте [инструкции от автора мода.](https://www.nexusmods.com/skyrim/mods/28996)'
+
   - name: 'Auto Unequip Arrows.esp'
     msg:
       - <<: *alreadyInX
