--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1438,6 +1438,9 @@ plugins:
 
 ###### Gameplay ######
   - name: 'BorderRegionsDisabled(EV)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/9596/'
+        name: 'Border Regions Disabled'
     msg:
       - type: say
         content:
